# hal9000_w

./: .gitignore  HAL9000.py  readme.md
HAL/: CMakeLists.txt
HAL/ACPI/: CMakeLists.txt
HAL/ACPI/inc/platform/: acenv.h  achal9000.h
HAL/CommonLib/: CMakeLists.txt
HAL/CommonLib/headers/: seh.h
HAL/CommonLib/inc/: assert.h  base.h  bitmap.h  cl_string.h  crc32.h  data_type.h  debug.h  event.h  hash_table.h  intutils.h  list.h  lock_common.h  monlock.h  rec_rw_spinlock.h  ref_cnt.h  rw_spinlock.h  sal_interface.h  sal_intrinsic.h  slist.h  spinlock.h  stack_interface.h  status.h  va_list.h
HAL/CommonLib/src/: assert.c  checkin_queue.c  cl_heap.c  cl_memory.c  cl_string.c  common_lib.c  crc32.c  debug.c  event.c  gs_checks.c  gs_utils.c  hash_table.c  list.c  lock_common.c  monlock.c  rec_rw_spinlock.c  ref_cnt.c  rtc_checks.c  rw_spinlock.c  seh.c  spinlock.c  stack_dynamic.c  stack_interface.c  strutils.c
HAL/CompilerAbstraction/: CMakeLists.txt
HAL/CompilerAbstraction/inc/: cal_annotate.h  cal_assembly.h  cal_assert.h  cal_atomic.h  cal_compiler.h  cal_exact_types.h  cal_intrin.h  cal_optimize.h  cal_sal.h  cal_saldef.h  cal_seh.h  cal_types.h  cal_va_list.h  cal_vargs.h  cal_warning.h
HAL/CompilerAbstraction/src/: cal_assembly.c  cal_atomic.c  readfsqword.yasm
HAL/Filesystems/FAT32/: CMakeLists.txt
HAL/Filesystems/FAT32/headers/: fat_operations.h  fat_structures.h
HAL/Filesystems/FAT32/src/: fat32.c  fat_operations.c  fat_utils.c
HAL/Filesystems/SwapFS/: CMakeLists.txt
HAL/Filesystems/SwapFS/src/: swapfs.c
HAL/HAL/: CMakeLists.txt
HAL/HAL/headers/: ioapic_registers.h  lapic_registers.h
HAL/HAL/inc/: apic_common.h  cpu.h  cpu_if.h  cpu_utils.h  cpuid_leaf.h  gdt.h  hw_fpu.h  ioapic.h  msr.h  pci_registers.h  pit.h  pte.h  rtc.h  tss.h  vmcs_fields.h  vmx_exit.h  yasm_imports.h
HAL/HAL/src/: _exports.yasm  cmos.c  cpu_utils.c  gdt.c  hw_fpu.c  idt.c  ioapic.c  lapic.c  pci.c  pic.c  pit.c  pte.c  serial.c  vmx.c
HAL/HAL9000/: CMakeLists.txt  HAL9000.ld
HAL/HAL9000/headers/apps/: cmd_basic.h  cmd_common.h  cmd_fs_helper.h  cmd_net_helper.h  cmd_proc_helper.h  cmd_sys_helper.h  cmd_thread_helper.h
HAL/HAL9000/headers/base/: HAL9000.h  display.h  display_glyphs.h  display_internal.h  uefi.h
HAL/HAL9000/headers/base/yasm/: defines.yasm  structs.yasm
HAL/HAL9000/headers/boot/: ap_tramp.h  bootinfo.h
HAL/HAL9000/headers/core/: acpi_interface.h  efi_runtime.h  system.h
HAL/HAL9000/headers/core/cpu/: cpumu.h  ipc.h  isr.h
HAL/HAL9000/headers/core/memory/: mdl.h  mmu.h  pmm.h  vm_reservation_space.h
HAL/HAL9000/headers/crt/: print.h
HAL/HAL9000/headers/debug/: debug_database.h
HAL/HAL9000/headers/debug/dump/: dmp_common.h
HAL/HAL9000/headers/debug/test/: perf_framework.h  test_common.h  test_thread.h
HAL/HAL9000/headers/devices/apic/: ioapic_system.h
HAL/HAL9000/headers/devices/keyboard/: scan_codes.h
HAL/HAL9000/headers/executive/: mutex.h  process_internal.h  thread_internal.h
HAL/HAL9000/headers/usermode/: exe_loader.h  um_application.h
HAL/HAL9000/src/apps/: cmd_basic.c  cmd_fs_helper.c  cmd_interpreter.c  cmd_net_helper.c  cmd_proc_helper.c  cmd_sys_helper.c  cmd_thread_helper.c
HAL/HAL9000/src/base/: display.c  hal_assert.c  os_info.c
HAL/HAL9000/src/boot/: _hal_entry.yasm  _low_mem.yasm  ap_tramp.c  boot_module.c  bootinfo.c
HAL/HAL9000/src/core/: Entry64.c  acpi_interface.c  acpi_osl.c  core.c  efi_runtime.c  system.c  system_driver.c
HAL/HAL9000/src/core/cpu/: cpumu.c  gdtmu.c  idt_handlers.c  (+3 more)
HAL/HAL9000/src/crt/: keyboard_utils.c  print.c
HAL/HAL9000/src/debug/: debug_database.c  log.c
HAL/HAL9000/src/executive/: ex_event.c  mutex.c  process.c  thread.c
HAL/HAL9000/src/usermode/: exe_loader.c  syscall.c  um_application.c
HAL/Misc/ELF_Parser/: CMakeLists.txt
HAL/Misc/ELF_Parser/inc/: elf_exports.h  elf_parser.h
HAL/Misc/ELF_Parser/src/: elf_parser.c
HAL/Misc/PE_Parser/: CMakeLists.txt
HAL/Misc/PE_Parser/headers/: pe_structures.h
HAL/Networking/Eth_82574L/: CMakeLists.txt
HAL/Networking/Eth_82574L/headers/: eth_82574L_regs.h  eth_82574L_structures.h
HAL/Networking/Eth_82574L/src/: eth_82574L.c  eth_82574L_operations.c  eth_82574L_structures.c
HAL/Networking/NetworkPort/: CMakeLists.txt
HAL/Networking/NetworkPort/headers/: network_structures.h
HAL/Networking/NetworkPort/inc/: network_port.h
HAL/Networking/NetworkPort/src/: network_dispatch.c  network_miniport.c  network_port.c  network_structures.c
HAL/Networking/NetworkStack/: CMakeLists.txt
HAL/Networking/NetworkStack/src/: network_interface.c  network_operations.c  network_stack.c
HAL/Shared/common/: syscall_func.h  syscall_no.h  thread_defs.h
HAL/Shared/kernel/: ex_event.h  filesystem.h  io.h  io_structures.h  log.h  network_packets.h  pci_system.h
HAL/Storage/Ata/: CMakeLists.txt
HAL/Storage/Ata/headers/: ata_commands.h  ata_registers.h
HAL/Storage/Ata/src/: ata.c  ata_dispatch.c  ata_operations.c
HAL/Storage/Disk/: CMakeLists.txt
HAL/Storage/Disk/inc/: mbr.h
HAL/Storage/Disk/src/: disk.c  disk_dispatch.c
HAL/Storage/Volume/: CMakeLists.txt
HAL/Storage/Volume/src/: volume.c  volume_dispatch.c
HAL/User-mode/Applications/: Applications.ld  CMakeLists.txt
HAL/User-mode/Applications/AppHelloWorld/: CMakeLists.txt
HAL/User-mode/Applications/LightProjectApp/: CMakeLists.txt  main.c
HAL/User-mode/Applications/TestApp/: CMakeLists.txt
HAL/User-mode/Applications/Tests/: CMakeLists.txt
HAL/User-mode/Utils/UsermodeLibrary/: CMakeLists.txt
ImageCreator/: CMakeLists.txt
ImageCreator/include/: cal_types.h  crc32.hpp  fat.hpp  gpt.hpp  memory_map.hpp
ImageCreator/src/: crc32.cpp  fat.cpp  gpt.cpp  main.cpp
UefiBootloader/: CMakeLists.txt
UefiBootloader/include/Bootloader/: acpi.h  bootinfo.h  console.h  crc32.h  filesystem.h  graphics.h  loader.h  memory.h  memory_map.h  paging.h  runtime.h  types.h
UefiBootloader/include/Uefi/: Base.h
UefiBootloader/src/: acpi.c  console.c  crc32.c  efi_entry.c  filesystem.c  graphics.c  loader.c  memory.c  memory_map.c  paging.c  runtime.c  start_os.yasm
(+215 files in other folders)
