cmake_minimum_required(VERSION 3.28.3 FATAL_ERROR)

set(FAT32_INCLUDES 
    ${CMAKE_SOURCE_DIR}/CompilerAbstraction/inc
    ${HAL9000_HEADERS}
    ${CMAKE_CURRENT_LIST_DIR}/headers
    ${PROJECT_SOURCE_DIR}/CommonLib/inc
    ${PROJECT_SOURCE_DIR}/Shared/common
    ${PROJECT_SOURCE_DIR}/Shared/kernel
    ${PROJECT_SOURCE_DIR}/HAL/inc
)

if (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
    set(FAT32_PDB_FLAG
        $<$<COMPILE_LANGUAGE:C>:/Fd:$<TARGET_FILE_DIR:FAT32>/FAT32.pdb>
    )
endif()

file(GLOB_RECURSE FAT32_SOURCES src/*.c src/*.yasm)

add_library(FAT32 STATIC ${FAT32_SOURCES})
target_include_directories(FAT32 PRIVATE $<$<COMPILE_LANGUAGE:C>:${FAT32_INCLUDES}> PUBLIC $<$<COMPILE_LANGUAGE:C>:${CMAKE_CURRENT_LIST_DIR}/inc>)
target_compile_options(FAT32 PRIVATE ${GLOBAL_FLAGS} PRIVATE ${GL_RELEASE_FLAG} PRIVATE ${FAT32_PDB_FLAG})
target_compile_definitions(FAT32 PRIVATE ${GLOBAL_DEFINES} PRIVATE ${UNICODE_DEFINES})

install(TARGETS FAT32 DESTINATION lib)
install(FILES $<TARGET_FILE_DIR:FAT32>/FAT32.pdb DESTINATION lib OPTIONAL)
