cmake_minimum_required(VERSION 3.28.3 FATAL_ERROR)

set(ETH_82574L_INCLUDES
    ${CMAKE_SOURCE_DIR}/CompilerAbstraction/inc
    ${HAL9000_HEADERS}
    ${CMAKE_CURRENT_LIST_DIR}/headers
    ${PROJECT_SOURCE_DIR}/CommonLib/inc
    ${PROJECT_SOURCE_DIR}/Shared/common
    ${PROJECT_SOURCE_DIR}/Shared/kernel
    ${PROJECT_SOURCE_DIR}/HAL/inc
    ${CMAKE_CURRENT_LIST_DIR}/../NetworkPort/inc
)

file(GLOB_RECURSE ETH_82574L_SOURCES src/*.c src/*.yasm)

if (CMAKE_C_COMPILER_ID STREQUAL "MSVC")
    set(ETH_82574L_PDB_FLAG
        $<$<COMPILE_LANGUAGE:C>:/Fd:$<TARGET_FILE_DIR:Eth_82574L>/Eth_82574L.pdb>
    )
endif()

add_library(Eth_82574L STATIC ${ETH_82574L_SOURCES})
target_include_directories(Eth_82574L PRIVATE $<$<COMPILE_LANGUAGE:C>:${ETH_82574L_INCLUDES}> PUBLIC $<$<COMPILE_LANGUAGE:C>:${CMAKE_CURRENT_LIST_DIR}/inc>)
target_compile_options(Eth_82574L PRIVATE ${GLOBAL_FLAGS} PRIVATE ${ETH_82574L_PDB_FLAG} PRIVATE ${GL_RELEASE_FLAG})
target_compile_definitions(Eth_82574L PRIVATE ${GLOBAL_DEFINES} PRIVATE ${MBCS_DEFINE})

install(TARGETS Eth_82574L DESTINATION lib)
install(FILES $<TARGET_FILE_DIR:Eth_82574L>/Eth_82574L.pdb DESTINATION lib OPTIONAL)
