cmake_minimum_required(VERSION 3.28.3 FATAL_ERROR)

add_subdirectory(BadJumpKernel)
add_subdirectory(BadJumpNoncanonical)
add_subdirectory(BadJumpNull)
add_subdirectory(BadReadIoPort)
add_subdirectory(BadReadKernel)
add_subdirectory(BadReadMsr)
add_subdirectory(BadReadNonCanonical)
add_subdirectory(BadReadNull)
add_subdirectory(BadWriteIoPort)
add_subdirectory(BadWriteKernel)
add_subdirectory(BadWriteMsr)
add_subdirectory(BadWriteNonCanonical)
add_subdirectory(BadWriteNull)
