cmake_minimum_required(VERSION 3.28.3 FATAL_ERROR)

add_subdirectory(FileCloseBad)
add_subdirectory(FileCloseNormal)
add_subdirectory(FileCloseStdout)
add_subdirectory(FileCloseTwice)
add_subdirectory(FileCreateBadPointer)
add_subdirectory(FileCreateEmptyPath)
add_subdirectory(FileCreateExistent)
add_subdirectory(FileCreateMissing)
add_subdirectory(FileCreateNormal)
add_subdirectory(FileCreateNull)
add_subdirectory(FileCreateTwice)
add_subdirectory(FileReadBadHandle)
add_subdirectory(FileReadBadPointer)
add_subdirectory(FileReadKernel)
add_subdirectory(FileReadNormal)
add_subdirectory(FileReadStdout)
add_subdirectory(FileReadZero)
