cmake_minimum_required(VERSION 3.28.3 FATAL_ERROR)

add_subdirectory(ProcessCloseFile)
add_subdirectory(ProcessCloseNormal)
add_subdirectory(ProcessCloseParentHandle)
add_subdirectory(ProcessCloseTwice)
add_subdirectory(ProcessCreateBadPointer)
add_subdirectory(ProcessCreateMissingFile)
add_subdirectory(ProcessCreateMultiple)
add_subdirectory(ProcessCreateOnce)
add_subdirectory(ProcessCreateWithArguments)
add_subdirectory(ProcessExit)
add_subdirectory(ProcessGetPid)
add_subdirectory(ProcessWaitBadHandle)
add_subdirectory(ProcessWaitClosedHandle)
add_subdirectory(ProcessWaitNormal)
add_subdirectory(ProcessWaitTerminated)
